@@ -29,6 +29,8 @@
 	* src/EditPlace.py: Typo.
 
 	* src/FamilyView.py: Correct constants for birth relationship.
+	* src/AddSpouse.py (select_spouse_clicked): Prevent adding child
+	of the family as a spouse in that family.
 
 2005-03-09  Don Allingham  <don@gramps-project.org>
 	* src/NameEdit.py: assign date on close
